--- a/src/components/carousel/carousel.css
+++ b/src/components/carousel/carousel.css
@@ -1,7 +1,7 @@
 .details-switch-demo-wrapper {
     position: relative;
     overflow: hidden;
-    height: 1600px;
+    height: 1200px;
     transition: background 1s;
     display: flex;
     flex-direction: column;
@@ -10,7 +10,7 @@
   .details-switch-demo {
     margin: 40px auto;
     width: 100%;
-    height: 800px;
+    height: 1200px;
     background: #fff;
     border-radius: 6px;
     display: flex;
@@ -19,50 +19,45 @@
     position: relative;
   }
 
+  .carouselTitle {
+    font-family: var(--mainFont);
+    font-weight: bolder;
+  }
+
   .details-switch-demo-img-wrapper {
     width: 100%;
   }
 
   .details-switch-demo-text-wrapper {
-    width: 50%;
-    /* display: inline-block; */
-    /* height: 100%; */
-    /* position: relative; */
-    overflow: visible;
-    display: block;
-    position:relative;
+    width: 100%;
+    height: 100%;
+    position: relative;
+    overflow: hidden;
   }
-  
+
   .details-switch-demo-pic,
   .details-switch-demo-map {
-    /* position: absolute; */
+    position: absolute;
   }
   
   .details-switch-demo-pic {
-    /* width: 220px;
-    top: 100px;
-    left: 40px; */
-    width: 200px;
-    left: 100px;
-    top: 50px;
+    width: 65%;
+    /* margin-left: 20%; */
+    /* margin-top: 5%; */
+    right: 20%;
   }
   
   .details-switch-demo-map {
-    width: 230px;
-    /* top: 60px;  */
-    left: 80px;
-    /* top: 225px; */
-    color: rgb(43, 88, 43);
+    width: 500px;
+    /* left: 80px; */
   }
   .details-switch-demo-map.map2{
-    width: 230px;
-    /* top: 60px;  */
-    left: 65px;
-    /* top: 225px; */
+    width: 500px;
+    /* left: 65px; */
   }
   
   .details-switch-demo-text-wrapper .banner-anim-elem {
-    padding: 40px;
+    padding-left: 40px;
   }
   
   .details-switch-demo-text-wrapper h1 {
@@ -78,7 +73,7 @@
   }
   
   .details-switch-demo-text-wrapper p {
-    font-size: 12px;
+    font-size: 2rem;
     margin-top: 10px;
   }
   
@@ -104,7 +99,7 @@
   }
 
   .details-switch-demo-text-wrapper p {
-  font-size: 0.8rem;
+  font-size: 1.5rem;
   /* margin-bottom: 30px; */
   }
 
@@ -115,11 +110,33 @@
   color: blue;
   }
 
+  .queueCon {
+    display: flex;
+    justify-content: space-around;
+    width: 100%;
+  }
 
-  .conCon {
+  .textCon {
     display: flex;
     flex-direction: column;
+    width: 50%;
   }
+
+  .skillsGrid {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    padding: 10px;
+    height: 100%;
+  }
+
+  @media screen and (max-width: 1600px) {
+    .details-switch-demo {
+      height: 600px;
+    }
+  }
+
   @media screen and (max-width: 414px) {
     .details-switch-demo {
       transform: scale(.6) translateX(12px);
