--- a/src/components/navbar/navbar.module.css
+++ b/src/components/navbar/navbar.module.css
@@ -1,22 +1,57 @@
 .navbarCon {
-    background-color: var(--mainColor);
+    background-color: transparent;
+    display: flex;
+    justify-content: space-between;
     padding: 1rem;
+}
+
+.leftCon {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    /* border-color: var(--varsecondaryColor); */
+    border-color: white;
+    border-width: 5px;
+    padding: 10px;
+    border-top-right-radius: 50%;
+    border-bottom-right-radius: 50%;
+    border-color: var(--secondaryColor);
+    transition: all 0.15s ease-in;
+}
+
+.leftCon span {
+    color: var(--secondaryColor);
+    font-size: 1.5rem;
+    letter-spacing: -5px;
+}
+
+.leftCon:hover  {
+    /* background-color: var(--secondaryColor); */
+    background-color: var(--secondaryColor);
+}
+
+.leftCon:hover span a {
+    color: var(--mainColor);
 }
 
 .navbarList {
     display: flex;
     justify-content: space-evenly;
     align-items: center;
+    list-style: disc;
 }
 
 .navbarList li {
     display: flex;
     flex-direction: column;
-    font-weight:bolder;
     font-family: var(--mainFont);
-    color: white;
-    font-size: 1.5rem;
+    color: var(--secondaryColor);
+  font-size: 1.5rem;  
     padding: 3px 10px;
+}
+
+#emptyList::after {
+    display: none;
 }
 
 .navbarList li::after {
@@ -25,7 +60,7 @@
     display: block;
     width: 100%;
     height: 2px;
-    background-color: white;
+    background-color: var(--secondaryColor);
     transform: scaleX(0);
     transition: transform 0.3s ease;
 }
@@ -34,12 +69,41 @@
     transform: scaleX(1);
 }
 
+.rightCon {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    width: 200px;
+}
+
+.rightCon span {
+    color: var(--secondaryColor);
+    font-size: 1.5rem;
+}
+
+.lightCircle {
+    padding: 1rem;
+    border-radius: 50%;
+    background-color: var(--secondaryColor);
+}
+
 @media screen and (max-width: 550px) {
-    .navbarList {
+    .navbarCon {
         display: flex;
         flex-direction: column;
-        justify-content: space-evenly;
+        justify-content: center;
         align-items: center;
+    }
+    .navbarList {
+        display: grid;
+        grid-template-rows: 1fr 1fr;
+        grid-template-columns: 1fr 1fr;
+        justify-items: center;
+        align-content: center;
+    }
+    #emptyList {
+        display: none;
+        color: red;
     }
 }
 
