--- a/src/app/homepage.module.css
+++ b/src/app/homepage.module.css
@@ -19,6 +19,13 @@
   align-items: center;
 }
 
+.heroTitleHome {
+  font-size: 8rem;
+  text-align: center;
+  line-height: 7rem;
+  color: white;
+}
+
 @keyframes fadeIn {
   0% {
     transform: translateY(-50px);
