--- a/src/app/about/about.module.css
+++ b/src/app/about/about.module.css
@@ -1,51 +1,147 @@
 .homepageCon {
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
-    height: 100vh;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+.titleCon {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 8rem;
+  margin-left: 2rem;
+  animation: fadeIn 0.5s linear 0s 1;
+}
+
+.skillsCon {
+  display: grid;
+  margin-right: 1rem;
+  grid-template-columns: 1fr 1fr 1fr;
+}
+
+.skillsCon h2 {
+  margin: 1.5rem 0px;
+  text-decoration: underline;
+  font-size: 1.5rem;
+  cursor: pointer;
+  width: 100px;
+}
+
+.skillsCon h2:active {
+  color: white;
+}
+
+.skillsList {
+  display: flex;
+  flex-direction: column;
+  animation: fadeIn 0.5s linear 0s 1;
+  height: 500px;
+}
+
+.skillsListOut {
+  display: flex;
+  flex-direction: column;
+  overflow: hidden;
+  z-index: -100;
+  animation: fadeOut 0.5s linear 0s 1;
+  opacity: 0;
+  height: 500px;
+}
+
+.skillsList p, .skillsListOut p {
+  border-width: 2px;
+  border-radius: 20px;
+  border-style: solid;
+  margin: 1rem 0px;
+  text-align: center;
+  padding: 10px;
+  font-weight: bold;
+  /* width: 50%; */
+  transition: all 0.15s ease-in;
+}
+
+.skillsList p:hover {
+  background-color: var(--secondaryColor);
+  color: var(--mainColor);
+}
+
+.skillsList p:hover a {
+  color: var(--mainColor);
+}
+
+.mail {
+  position: absolute;
+  right: 15%;
+  top: 15%;
+  animation:  
+  fadeIn 0.5s linear 0s 1; ;
+}
+
+@keyframes fadeIn {
+  0% {
+    transform: translateY(-50px);
+    opacity: 0;
+    filter: blur(5px);
   }
-  
+  100% {
+    transform: translateY(0px);
+    opacity: 1;
+    filter: blur(0px);
+}
+}
+
+@keyframes fadeOut {
+  0% {
+    transform: translateY(0px);
+    opacity: 1;
+    filter: blur(0px);
+  }
+  100% {
+    transform: translateY(-50px);
+    opacity: 0;
+    filter: blur(5px);
+}
+}
+
+@media  screen and (max-width: 1200px) {
+  .mail {
+    width: 100px;
+  }
+}
+
+@media  screen and (max-width: 550px) {
   .titleCon {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    animation: fadeIn 0.5s linear 0s 1;
+    flex-direction: column;
+    justify-content: space-evenly;
   }
-  
-  .darrellCon {
+  .skillsCon {
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    margin-bottom: 1rem;
   }
-  
-  @keyframes fadeIn {
-    0% {
-      transform: translateY(-50px);
-      opacity: 0;
-      filter: blur(5px);
-    }
-    100% {
-      transform: translateY(0px);
-      opacity: 1;
-      filter: blur(0px);
+
+  .skillsList {
+    height: auto;
   }
+  .skillsListOut {
+    height: 50px;
   }
-  
-  @media  screen and (max-width: 900px) {
-    .titleCon img {
-      width: 200px;
-    }
+
+  .skillsList p {
+    margin: 0px;
+    width: 100%;
+    text-align: center;
   }
-  @media  screen and (max-width: 550px) {
-    .titleCon {
-      flex-direction: column;
-      justify-content: space-evenly;
-    }
-    .homepageCon {
-      align-items:flex-start;
-    }
-    .homepageCon h2 {
-      font-size: 1.25rem;
-    }
+  .homepageCon {
+    align-items:flex-start;
   }
+  .homepageCon h2 {
+    font-size: 1.25rem;
+  }
+  .mail {
+    position: absolute;
+    width: 100px;
+    left: 45%;
+    top: 30%;
+  }
+}
