--- a/src/components/navbar/navbar.module.css
+++ b/src/components/navbar/navbar.module.css
@@ -9,13 +9,11 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    /* border-color: var(--varsecondaryColor); */
     border-color: white;
     border-width: 5px;
     padding: 10px;
     border-top-right-radius: 50%;
     border-bottom-right-radius: 50%;
-    border-color: var(--secondaryColor);
     transition: all 0.15s ease-in;
 }
 
@@ -50,6 +48,10 @@
     padding: 3px 10px;
 }
 
+#emptyList {
+    color:  white;
+}
+
 #emptyList::after {
     display: none;
 }
@@ -60,7 +62,7 @@
     display: block;
     width: 100%;
     height: 2px;
-    background-color: var(--secondaryColor);
+    background-color: white;
     transform: scaleX(0);
     transition: transform 0.3s ease;
 }
@@ -103,7 +105,6 @@
     }
     #emptyList {
         display: none;
-        color: red;
     }
 }
 
