--- a/src/app/about/about.module.css
+++ b/src/app/about/about.module.css
@@ -2,6 +2,7 @@
   display: flex;
   justify-content: flex-start;
   align-items: center;
+  animation: fadeIn 0.5s linear 0s 1;
 }
 
 .titleCon {
@@ -10,7 +11,11 @@
   align-items: center;
   margin-top: 8rem;
   margin-left: 2rem;
-  animation: fadeIn 0.5s linear 0s 1;
+}
+
+.darrellCon {
+  /* display: flex; */
+
 }
 
 .skillsCon {
@@ -111,8 +116,10 @@
 
 @media  screen and (max-width: 550px) {
   .titleCon {
-    flex-direction: column;
+    flex-direction: column-reverse;
     justify-content: space-evenly;
+    margin-top: 1rem;
+
   }
   .skillsCon {
     display: flex;
