--- a/src/app/contact/contact.module.css
+++ b/src/app/contact/contact.module.css
@@ -2,6 +2,7 @@
     display: flex;
     justify-content: flex-start;
     align-items: center;
+    animation: fadeIn 0.5s linear 0s 1;
   }
   
   .titleCon {
@@ -10,7 +11,6 @@
     align-items: center;
     margin-top: 8rem;
     margin-left: 2rem;
-    animation: fadeIn 0.5s linear 0s 1;
   }
 
   .skillsCon {
@@ -62,11 +62,7 @@
   }
 
   .mail {
-    position: absolute;
-    right: 15%;
-    top: 15%;
-    animation:  
-    fadeIn 0.5s linear 0s 1; ;
+    align-self: flex-start;
   }
 
   @keyframes fadeIn {
@@ -103,7 +99,7 @@
 
   @media  screen and (max-width: 550px) {
     .titleCon {
-      flex-direction: column;
+      flex-direction: column-reverse;
       justify-content: space-evenly;
     }
     .skillsCon {
