--- a/src/components/loader/loader.module.css
+++ b/src/components/loader/loader.module.css
@@ -3,10 +3,8 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    position: absolute;
-    top: 15%;
-    right: 20%;
-    /* height: 100vh; */
+    align-self: flex-start;
+    margin-right: 15rem;
 }
     
 .scribbleOne {
@@ -75,7 +73,6 @@
 
 @media screen and (max-width: 550px) {
     .scribCon{
-        top: 30%;
-        right: 50%;
+        margin: 2rem 0px;
     }
 }
