--- a/src/app/about/about.module.css
+++ b/src/app/about/about.module.css
@@ -9,7 +9,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-top: 8rem;
+  flex-direction: column-reverse;
   margin-left: 2rem;
 }
 
@@ -108,12 +108,6 @@
 }
 }
 
-@media  screen and (max-width: 1200px) {
-  .mail {
-    width: 100px;
-  }
-}
-
 @media  screen and (max-width: 550px) {
   .titleCon {
     flex-direction: column-reverse;
@@ -144,11 +138,5 @@
   }
   .homepageCon h2 {
     font-size: 1.25rem;
-  }
-  .mail {
-    position: absolute;
-    width: 100px;
-    left: 45%;
-    top: 30%;
   }
 }
