--- a/src/app/contact/contact.module.css
+++ b/src/app/contact/contact.module.css
@@ -9,7 +9,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-top: 8rem;
+    flex-direction: column-reverse;
     margin-left: 2rem;
   }
 
@@ -61,10 +61,6 @@
     color: var(--mainColor);
   }
 
-  .mail {
-    align-self: flex-start;
-  }
-
   @keyframes fadeIn {
     0% {
       transform: translateY(-50px);
@@ -101,6 +97,7 @@
     .titleCon {
       flex-direction: column-reverse;
       justify-content: space-evenly;
+      margin-top: 0px;
     }
     .skillsCon {
       display: flex;
@@ -118,9 +115,7 @@
       font-size: 1.25rem;
     }
     .mail {
-      position: absolute;
       width: 100px;
-      left: 45%;
-      top: 30%;
+      margin: 2rem 0px;
     }
   }
