--- a/src/app/portfolio/projects.module.css
+++ b/src/app/portfolio/projects.module.css
@@ -1,9 +1,38 @@
-.heroCon {
+.homepageCon {
     display: flex;
-    justify-content: center;
-    align-items: flex-start;
-}
+    justify-content: flex-start;
+    align-items: center;
+    animation: fadeIn 0.5s linear 0s 1;
+  }
+  
+  .titleCon {
+    display: flex;
+    flex-direction: column-reverse;
+    align-items: center;
+    margin-left: 2rem;
+    animation: fadeIn 0.5s linear 0s 1;
+  }
 
-.heroTitle {
-    font-size: 5rem;
-}
+  @keyframes fadeIn {
+    0% {
+      transform: translateY(-50px);
+      opacity: 0;
+      filter: blur(5px);
+    }
+    100% {
+      transform: translateY(0px);
+      opacity: 1;
+      filter: blur(0px);
+  }
+  }
+
+  @media  screen and (max-width: 550px) {
+    .titleCon {
+      flex-direction: column-reverse;
+      justify-content: space-evenly;
+      margin-top: 0px;
+    }
+    .homepageCon {
+      align-items:flex-start;
+    }
+  }
