--- a/src/app/contact/contact.module.css
+++ b/src/app/contact/contact.module.css
@@ -34,14 +34,14 @@
   .skillsList {
     display: flex;
     flex-direction: column;
-    animation: fadeIn 0.5s linear 0s 1;
+    animation: fadeIn 0.5s cubic-bezier(0.9, 0.82, 0.165, 1) 0s 1;
   }
 
   .skillsListOut {
     display: flex;
     overflow: hidden;
     z-index: -100;
-    animation: fadeOut 0.5s linear 0s 1;
+    animation: fadeOut 0.5s cubic-bezier(0.9, 0.82, 0.165, 1) 0s 1;
     opacity: 0;
     height: 5px;
   }
