--- a/src/app/skills/skills.module.css
+++ b/src/app/skills/skills.module.css
@@ -3,6 +3,7 @@
     justify-content: flex-start;
     align-items: center;
     animation: fadeIn 0.5s linear 0s 1;
+    
   }
   
   .titleCon {
@@ -35,7 +36,7 @@
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     grid-gap: 1rem;
-    animation: fadeIn 0.5s linear 0s 1;
+    animation: fadeIn 0.5s cubic-bezier(0.9, 0.82, 0.165, 1) 0s 1;
   }
 
   .skillsListOut {
@@ -45,7 +46,7 @@
     z-index: -100;
     grid-template-columns: 1fr 1fr 1fr;
     grid-gap: 1rem;
-    animation: fadeOut 0.5s linear 0s 1;
+    animation: fadeOut 0.5s cubic-bezier(0.9, 0.82, 0.165, 1) 0s 1;
     opacity: 0;
     height: 50px;
   }
