style:00003 - changed to column structure

--- a/src/app/portfolio/projects.module.css
+++ b/src/app/portfolio/projects.module.css
@@ -1,6 +1,6 @@
 .homepageCon {
     display: flex;
-    justify-content: center;
+    /* justify-content: center; */
     align-items: center;
     animation: fadeIn 0.5s linear 0s 1;
   }
