--- a/src/app/portfolio/projects.module.css
+++ b/src/app/portfolio/projects.module.css
@@ -1,7 +1,7 @@
 .homepageCon {
-    display: flex;
+    /* display: flex; */
     /* justify-content: center; */
-    align-items: center;
+    /* align-items: center; */
     animation: fadeIn 0.5s linear 0s 1;
   }
 
@@ -14,7 +14,7 @@
   .titleCon {
     display: flex;
     flex-direction: column-reverse;
-    align-items: center;
+    /* align-items: center; */
     margin-left: 2rem;
     animation: fadeIn 0.5s linear 0s 1;
   }
