--- a/src/app/about/about.module.css
+++ b/src/app/about/about.module.css
@@ -35,6 +35,15 @@
   flex-direction: column;
   animation: fadeIn 0.5s cubic-bezier(0.9, 0.82, 0.165, 1) 0s 1;
   height: auto;
+  list-style: circle;
+}
+
+.experienceList {
+  list-style:square;
+}
+
+#experienceItem {
+  margin-left: 4rem;
 }
 
 .skillsListOut {
@@ -45,27 +54,17 @@
   animation: fadeOut 0.5s cubic-bezier(0.9, 0.82, 0.165, 1) 0s 1;
   opacity: 0;
   height: 5px;
+  list-style:circle ;
 }
 
-.skillsList p, .skillsListOut p {
-  border-width: 2px;
-  border-radius: 20px;
-  border-style: solid;
-  margin: 1rem 0px;
-  text-align: center;
-  padding: 10px;
-  font-weight: bold;
-  /* width: 50%; */
+.skillsList li, .skillsListOut li {
+  margin: 1rem 1rem;
+  font-size: 1.35rem;
   transition: all 0.15s ease-in;
 }
 
-.skillsList p:hover {
-  background-color: var(--secondaryColor);
-  color: var(--mainColor);
-}
-
-.skillsList p:hover a {
-  color: var(--mainColor);
+.skillsList a:hover {
+  color: white;
 }
 
 .mail {
@@ -122,10 +121,8 @@
     height: 50px;
   }
 
-  .skillsList p {
-    margin: 0px;
-    width: 100%;
-    text-align: center;
+  .skillsList li {
+    font-size: 1rem;
   }
   .homepageCon {
     align-items:flex-start;
