--- a/src/components/navbar/navbar.module.css
+++ b/src/components/navbar/navbar.module.css
@@ -97,7 +97,7 @@
         justify-content: center;
         align-items: center;
     }
-    .navbarList {
+    .navbarList, .navbarListDark {
         display: grid;
         grid-template-rows: 1fr 1fr;
         grid-template-columns: 1fr 1fr;
@@ -109,6 +109,6 @@
     }
 }
 
-.navbarList li {
+.navbarList li, .navbarListDark li {
     margin-top: 5px;
 }
