--- a/src/components/carousel/carousel.module.css
+++ b/src/components/carousel/carousel.module.css
@@ -29,9 +29,11 @@
   display: flex;
   flex-direction: column;
   width: 1000px;
-  border-width: 5px;
-  border-color: white;
+  /* border-width: 5px; */
+  /* border-color: white; */
   border-radius: 20px;
+  -webkit-box-shadow: 0px 0px 20px 5px #FFFFFF; 
+  box-shadow: 0px 0px 20px 5px #FFFFFF;
   animation: fadeIn 0.5s cubic-bezier(0.9, 0.82, 0.165, 1) 0s 1;
 }
 
@@ -39,8 +41,8 @@
   display: flex;
   flex-direction: column;
   width: 1000px;
-  border-width: 5px;
-  border-color: white;
+  /* border-width: 5px; */
+  /* border-color: white; */
   border-radius: 20px;
   opacity: 0;
   height: 0px;
