--- a/src/app/about/about.module.css
+++ b/src/app/about/about.module.css
@@ -39,7 +39,7 @@
 }
 
 .experienceList {
-  list-style:square;
+  list-style: square;
 }
 
 #experienceItem {
@@ -54,10 +54,11 @@
   animation: fadeOut 0.5s cubic-bezier(0.9, 0.82, 0.165, 1) 0s 1;
   opacity: 0;
   height: 5px;
-  list-style:circle ;
+  list-style: circle;
 }
 
-.skillsList li, .skillsListOut li {
+.skillsList li,
+.skillsListOut li {
   margin: 1rem 1rem;
   font-size: 1.35rem;
   transition: all 0.15s ease-in;
@@ -71,8 +72,7 @@
   position: absolute;
   right: 15%;
   top: 15%;
-  animation:  
-  fadeIn 0.5s linear 0s 1; ;
+  animation: fadeIn 0.5s linear 0s 1;
 }
 
 @keyframes fadeIn {
@@ -85,7 +85,7 @@
     transform: translateY(0px);
     opacity: 1;
     filter: blur(0px);
-}
+  }
 }
 
 @keyframes fadeOut {
@@ -98,15 +98,14 @@
     transform: translateY(-50px);
     opacity: 0;
     filter: blur(5px);
-}
+  }
 }
 
-@media  screen and (max-width: 550px) {
+@media screen and (max-width: 550px) {
   .titleCon {
     flex-direction: column-reverse;
     justify-content: space-evenly;
-    margin-top: 1rem;
-
+    padding-top: 1rem;
   }
   .skillsCon {
     display: flex;
@@ -125,7 +124,7 @@
     font-size: 1rem;
   }
   .homepageCon {
-    align-items:flex-start;
+    align-items: flex-start;
   }
   .homepageCon h2 {
     font-size: 1.25rem;
