--- a/src/components/carousel/carousel.module.css
+++ b/src/components/carousel/carousel.module.css
@@ -5,7 +5,7 @@
 }
 
 .portfolioCon {
-  margin: 5rem 2rem;
+  margin: 2rem 2rem;
 }
 
 .portfolioCon li {
@@ -25,12 +25,14 @@
   list-style: decimal;
 }
 
+.project {
+  cursor: pointer;
+}
+
 .queueCon {
   display: flex;
   flex-direction: column;
   width: 1000px;
-  /* border-width: 5px; */
-  /* border-color: white; */
   border-radius: 20px;
   -webkit-box-shadow: 0px 0px 20px 5px #FFFFFF; 
   box-shadow: 0px 0px 20px 5px #FFFFFF;
@@ -41,11 +43,10 @@
   display: flex;
   flex-direction: column;
   width: 1000px;
-  /* border-width: 5px; */
-  /* border-color: white; */
   border-radius: 20px;
   opacity: 0;
   height: 0px;
+  margin: 0px;
 	overflow: hidden;
   z-index: -100;
 	animation: fadeOut 0.5s cubic-bezier(0.9, 0.82, 0.165, 1) 0s 1;
@@ -66,6 +67,17 @@
   padding: 1rem;
 }
 
+.textList {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.textList li {
+  font-size: 1.25rem;
+  text-align: center;
+}
+
 .textCon a {
   color: white;
   font-weight: bold;
@@ -77,7 +89,8 @@
 
 .stackCon {
   display: flex;
-  padding: 1rem;
+  flex-wrap: wrap;
+  padding: 0.5rem;
 }
 
 @keyframes fadeIn {
@@ -114,16 +127,17 @@
   .portfolioCon {
     width: 300px;
   }
+  .project {
+    margin-top: 3rem;
+  }
   .queueCon {
     display: flex;
     flex-direction: column;
-    margin: 3rem 0px;
     width: 300px;
   }
   .queueConOut {
     display: flex;
     flex-direction: column;
-    margin: 3rem 0px;
     width: 300px;
     height: 5px;
   }
@@ -131,15 +145,14 @@
     width: 300px;
     height: 200px;
   }
-  .portfolioList {
-    margin: 0px;
-  }
-  .portfolioCon {
+  .portfolioList, .portfolioCon {
     margin: 0px;
   }
   .portfolioCon li {
-    font-size: 1.5rem;
-    margin-top: 5rem;
+    font-size: 1.25rem;
     width: 100%;
+  }
+  .textList li {
+    font-size: 1rem;
   }
 }
