--- a/src/app/blog/blog.module.css
+++ b/src/app/blog/blog.module.css
@@ -9,24 +9,31 @@
     margin-left: 2rem;
 }
 
-.articleCon {
-  display: flex;
-  font-size: 1.5rem;
-  width: 75ch;
-  margin: 2rem;
-}
-
 .postsCon {
   display: flex;
   justify-content: space-evenly;
 }
 
 .postsCon a {
+  display: flex;
+  flex-direction: column;
+  width: 50%;
+  text-align: center;
   margin: 1rem 3rem;
+}
+
+.posts h3 {
+  font-style: italic;
+  font-size: 1rem;
 }
 
 .rotateBorder {
   position: absolute;
+  background-image: url("/assets/blogimages/wordpressScreenshot.jpg");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  opacity: 0.07;
   padding: 8rem;
   border-color: white;
   border-width: 5px;
@@ -38,6 +45,7 @@
   text-align: center;
   font-size: 1.5rem;
   margin-top: 30%;
+  z-index: 3;
 }
 
 .mail {
@@ -70,30 +78,6 @@
   }
   }
 
-  @keyframes borderRad {
-    0% {
-      border-bottom-right-radius: 30%;
-      border-bottom-left-radius: 45%;
-      border-top-right-radius: 75%;
-      border-top-left-radius: 90%;
-      transform: rotate(0deg);
-    }
-    50% {
-      border-bottom-right-radius: 80%;
-      border-bottom-left-radius: 90%;
-      border-top-right-radius: 25%;
-      border-top-left-radius: 30%;
-      transform: rotate(180deg);
-    }
-    100% {
-      border-bottom-right-radius: 30%;
-      border-bottom-left-radius: 45%;
-      border-top-right-radius: 75%;
-      border-top-left-radius: 90%;
-      transform: rotate(360deg);
-    }
-  }
-
   @media  screen and (max-width: 1200px) {
     .mail {
       width: 100px;
@@ -118,12 +102,12 @@
     }
     .postsCon {
       display: grid;
-      /* width: 100%; */
       grid-template-columns: repeat(auto-fill, minmax(125px, 1fr));
       gap: 6rem;
     }
     .postsCon a {
-      margin: 0px;
+      /* width: 50%; */
+      align-items: center;
     }
     .rotateBorder {
       padding: 6rem;
