--- a/src/app/blog/blog.module.css
+++ b/src/app/blog/blog.module.css
@@ -11,10 +11,13 @@
 
 .postsCon {
   display: flex;
+  flex-direction: column;
   justify-content: space-evenly;
 }
 
 .postsCon a {
+  display: flex;
+  justify-content: space-evenly;
   text-align: center;
   margin: 1rem 3rem;
 }
@@ -22,20 +25,16 @@
 .posts h3 {
   font-style: italic;
   font-size: 1rem;
+  margin-bottom: 1rem;
 }
 
 .rotateBorder {
-  position: absolute;
-  background-image: url("/assets/blogimages/wordpressScreenshot.jpg");
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
-  opacity: 0.07;
   padding: 8rem;
   border-color: white;
   border-width: 5px;
   border-style:ridge;
   animation: borderRad 7s linear 0s infinite;
+  margin-bottom: 1rem;
 }
 
 .posts {
@@ -97,17 +96,10 @@
       width: 100px;
       margin: 2rem 0px;
     }
-    .posts {
-      width: 100%;
-    }
-    .postsCon {
-      flex-direction: column;
-    }
     .postsCon a {
-      width: 50%;
-      margin: 5rem 0px;
+      margin: 1rem 0px;
     }
     .rotateBorder {
-      padding: 6rem;
+      padding: 4rem;
     }
   }
