--- a/src/app/blog/[path]/post.module.css
+++ b/src/app/blog/[path]/post.module.css
@@ -11,7 +11,7 @@
 }
 
 .titleCon h1 {
-  font-size: clamp(2rem, 5vw, 5rem);;
+  font-size: clamp(2rem, 5vw, 5rem);
 }
 
 .articleCon {
@@ -20,6 +20,18 @@
   font-size: clamp(1rem, 2vw, 1.5rem);
   width: 75ch;
   margin: 2rem;
+}
+
+.articleCon h2 {
+    font-size: clamp(1.5rem, 3vw, 3rem);
+    text-decoration: underline;
+    color: white;
+}
+
+.articleConDark h2 {
+  font-size: clamp(1.5rem, 3vw, 3rem);
+  text-decoration: underline;
+  color: black;
 }
 
 .articleConDark {
