--- a/src/app/blog/blog.module.css
+++ b/src/app/blog/blog.module.css
@@ -22,6 +22,18 @@
   margin: 1rem 3rem;
 }
 
+.noresultsCon {
+  display: flex;
+  justify-content: center;
+  height: 50vh;
+  margin: 1rem 3rem;
+}
+
+.noresultsCon h2 {
+  text-align: center;
+  font-size: 3rem;
+}
+
 .posts h3 {
   font-style: italic;
   font-size: 1rem;
