slight adjustment to font size

--- a/src/components/search/searchbar.css
+++ b/src/components/search/searchbar.css
@@ -5,6 +5,7 @@
 :where(.css-dev-only-do-not-override-1xg9z9n).ant-btn-primary,
 :where(.css-1xg9z9n).ant-btn-primary {
     color: var(--secondaryColor);
+    font-size: 1rem;
 }
 
 :where(.css-dev-only-do-not-override-1xg9z9n).ant-btn-primary:not(:disabled):not(.ant-btn-disabled):active,
@@ -15,12 +16,13 @@
 :where(.css-1xg9z9n).ant-btn-primary:not(:disabled):not(.ant-btn-disabled):hover {
     background-color: var(--secondaryColor);
     color: var(--mainColor);
-    border-color: var(--secondaryColor);
+    font-size: 1rem;
 }
 
 .darkSearchCon :where(.css-dev-only-do-not-override-1xg9z9n).ant-btn-primary,
 .darkSearchCon :where(.css-1xg9z9n).ant-btn-primary {
     color: var(--mainColor);
+    font-size: 1rem;
 }
 
 .darkSearchCon :where(.css-dev-only-do-not-override-1xg9z9n).ant-btn-primary:not(:disabled):not(.ant-btn-disabled):hover,
@@ -31,4 +33,5 @@
 .darkSearchCon :where(.css-1xg9z9n).ant-btn-primary:not(:disabled):not(.ant-btn-disabled):active {
     background-color: var(--mainColor);
     color: var(--secondaryColor);
+    font-size: 1rem;
 }
