--- a/src/app/blog/[path]/post.module.css
+++ b/src/app/blog/[path]/post.module.css
@@ -80,7 +80,8 @@
 .imageCon img {
   filter: grayscale(1);
   border-radius: 25px;
-  width: 65%;
+  width: 1140px;
+  height: 550px;
 }
 
 .imageCon2 img {
