--- a/src/app/blog/blog.module.css
+++ b/src/app/blog/blog.module.css
@@ -55,6 +55,10 @@
   margin-bottom: 1rem;
 }
 
+.rotateBorder img {
+
+}
+
 .posts {
   font-size: 1.5rem;
   margin-top: 10%;
@@ -122,5 +126,8 @@
     }
     .rotateBorder {
       padding: 4rem;
+      width: 175px;
+      height: 175px;
+      margin-right: 1rem;
     }
   }
