--- a/src/app/about/about.module.css
+++ b/src/app/about/about.module.css
@@ -18,7 +18,7 @@
 .skillsCon h2 {
   margin: 1.5rem 0px;
   /* text-decoration: underline; */
-  border-bottom-color: white;
+  border-bottom-color: var(--tertiaryColor);
   border-bottom-style: solid;
   border-bottom-width: 1px;
   font-size: 3rem;
@@ -27,7 +27,7 @@
 }
 
 .skillsCon h2:active {
-  color: white;
+  color: var(--tertiaryColor);
 }
 
 .skillsList {
@@ -65,7 +65,7 @@
 }
 
 .skillsList a:hover {
-  color: white;
+  color: var(--tertiaryColor);
 }
 
 .mail {
