--- a/src/app/blog/[path]/post.module.css
+++ b/src/app/blog/[path]/post.module.css
@@ -12,6 +12,11 @@
 
 .titleCon h1 {
   font-size: clamp(2rem, 5vw, 5rem);
+  color: var(--tertiaryColor);
+}
+
+.titleCon span {
+  color: var(--secondaryColor);
 }
 
 .articleCon {
@@ -22,37 +27,18 @@
   margin: 2rem;
 }
 
+.articleCon hr {
+  color: var(--tertiaryColor);
+}
+
 .articleCon h2 {
     font-size: clamp(1.5rem, 3vw, 3rem);
     text-decoration: underline;
-    color: white;
-}
-
-.articleConDark h2 {
-  font-size: clamp(1.5rem, 3vw, 3rem);
-  text-decoration: underline;
-  color: black;
-}
-
-.articleConDark {
-  display: flex;
-  flex-direction: column;
-  font-size: clamp(1rem, 2vw, 1.5rem);
-  width: 75ch;
-  margin: 2rem;
+    color: var(--tertiaryColor);
 }
 
 .articleCon a {
-  color: white;
-  text-decoration: underline;
-}
-
-.articleConDark p {
-  color: var(--mainColor);
-}
-
-.articleConDark a {
-  color: black;
+  color: var(--tertiaryColor);
   text-decoration: underline;
 }
 
@@ -67,14 +53,13 @@
 .imageCon, .imageCon2 {
   display: flex;
   flex-direction: column;
-  /* align-items: center; */
   margin: 2rem;
 }
 
 .imageCon span, .imageCon2 span {
   font-size: clamp(0.9rem, 2vw, 1.25rem);
   font-style: italic;
-  color: white;
+  color: var(--tertiaryColor);
 }
 
 .imageCon img {
@@ -82,6 +67,8 @@
   border-radius: 25px;
   width: 1140px;
   height: 550px;
+  box-shadow: 0px 0px 20px 5px var(--tertiaryColor);
+  -webkit-box-shadow: 0px 0px 20px 5px var(--tertiaryColor);
 }
 
 .imageCon2 img {
@@ -143,11 +130,6 @@
       font-size: 1.25rem;
     }
     .articleCon {
-      font-size: 1rem;
-      width: auto;
-      margin: 1rem;
-    }
-    .articleConDark {
       font-size: 1rem;
       width: auto;
       margin: 1rem;
