--- a/src/components/carousel/carousel.module.css
+++ b/src/components/carousel/carousel.module.css
@@ -1,7 +1,7 @@
 .heroHomepageTitle {
   font-size: 8rem;
   line-height: 7rem;
-  color: white;
+  color: var(--tertiaryColor);
 }
 
 .portfolioCon {
@@ -10,7 +10,7 @@
 
 .portfolioCon li {
   font-size: 2rem;
-  border-bottom-color: white;
+  border-bottom-color: var(--tertiaryColor);
   border-bottom-width: 1px;
   width: 50%;
 }
@@ -33,8 +33,8 @@
   flex-direction: column;
   width: 1000px;
   border-radius: 20px;
-  -webkit-box-shadow: 0px 0px 20px 5px #FFFFFF; 
-  box-shadow: 0px 0px 20px 5px #FFFFFF;
+  -webkit-box-shadow: 0px 0px 20px 5px var(--tertiaryColor); 
+  box-shadow: 0px 0px 20px 5px var(--tertiaryColor);
   animation: fadeIn 0.5s cubic-bezier(0.9, 0.82, 0.165, 1) 0s 1;
 }
 
@@ -78,7 +78,7 @@
 }
 
 .textCon a {
-  color: white;
+  color: var(--tertiaryColor);
   font-weight: bold;
 }
 
@@ -90,6 +90,8 @@
   display: flex;
   flex-wrap: wrap;
   padding: 0.5rem;
+  background-color: #FFFFFF;
+  border-radius: 20px;
 }
 
 @keyframes fadeIn {
