--- a/src/components/loader2/loader2.module.css
+++ b/src/components/loader2/loader2.module.css
@@ -4,44 +4,33 @@
     justify-content: center;
     align-items: center;
 }
-    
-.scribbleOne {
+
+.scribbleOne, .scribbleTwo, .scribbleThree {
     display: flex;
     justify-content: center;
     align-items: center;
     border-color: var(--secondaryColor);
     border-width: 5px;
     border-style: double;
-    padding: 5rem;
-    animation: wobble 4s linear 0s infinite;
     filter: blur(15px);
 }
-    
+
+.scribbleOne {
+    padding: 5rem;
+    animation: wobble 4s linear 0s infinite;
+}
+
 .scribbleTwo {
     position: absolute;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-color: var(--secondaryColor);
-    border-width: 5px;
-    border-style:double;
     padding: 3rem;
     transform: rotate(90deg);
     animation: wobble2 10s linear 0s infinite;
-    filter: blur(15px);
 }
-    
+
 .scribbleThree {
     position: absolute;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-color: var(--secondaryColor);
-    border-width: 5px;
-    border-style:double;
     padding: 1rem;
     animation: wobble3 4s linear 0s infinite;
-    filter: blur(15px);
 }
     
 @keyframes wobble {
