--- a/src/components/navbar/navbar.module.css
+++ b/src/components/navbar/navbar.module.css
@@ -9,7 +9,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    border-color: white;
+    border-color: var(--tertiaryColor);
     border-width: 5px;
     padding: 10px;
     border-top-right-radius: 50%;
@@ -23,14 +23,14 @@
     letter-spacing: -5px;
 }
 
-.navbarList, .navbarListDark {
+.navbarList {
     display: flex;
     justify-content: space-evenly;
     align-items: center;
     list-style: disc;
 }
 
-.navbarList li, .navbarListDark li {
+.navbarList li {
     display: flex;
     flex-direction: column;
     font-family: var(--mainFont);
@@ -40,7 +40,7 @@
 }
 
 #emptyList {
-    color:  white;
+    color:  var(--tertiaryColor);
 }
 
 #emptyList::after {
@@ -52,22 +52,13 @@
     display: block;
     width: 100%;
     height: 2px;
-    background-color: white;
+    background-color: var(--tertiaryColor);
     transform: scaleX(0);
     transition: transform 0.3s ease;
 }
 
-.navbarListDark li::after {
-    content: "";
-    display: block;
-    width: 100%;
-    height: 2px;
-    background-color: black;
-    transform: scaleX(0);
-    transition: transform 0.3s ease;
-}
 
-.navbarList li:hover::after, .navbarListDark li:hover::after  {
+.navbarList li:hover::after {
     transform: scaleX(1);
 }
 
@@ -90,7 +81,7 @@
     cursor: pointer;
 }
 
-.navbarList li, .navbarListDark li {
+.navbarList li {
     margin-top: 5px;
 }
 
@@ -99,7 +90,7 @@
         flex-direction: column;
         align-items: center;
     }
-    .navbarList, .navbarListDark {
+    .navbarList {
         display: grid;
         width: 100%;
         grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
