00036: added label to DM checkbox for better access

--- a/src/components/dark-mode/darkmode.module.css
+++ b/src/components/dark-mode/darkmode.module.css
@@ -1,3 +1,7 @@
+.themeCon label {
+visibility: hidden;
+}
+
 .themeCon input[type="checkbox"] {
     appearance: none;
     -webkit-appearance: none;
