--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,6 +4,10 @@
 @source '../../node_modules/@heroui/theme/dist/**/*.{js,ts,jsx,tsx}';
 @custom-variant dark (&:is(.dark *));
 
-::-webkit-scrollbar {
+/* ::-webkit-scrollbar {
   width: 0px;
+} */
+
+html {
+  scroll-behavior: smooth;
 }
