--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,9 +4,9 @@
 @source '../../node_modules/@heroui/theme/dist/**/*.{js,ts,jsx,tsx}';
 @custom-variant dark (&:is(.dark *));
 
-/* ::-webkit-scrollbar {
-  width: 0px;
-} */
+@theme {
+  --breakpoint-md: 850px;
+}
 
 html {
   scroll-behavior: smooth;
